--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ ffd6d60e
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border: 1px solid #1a1a1a;
+    border: 1px solid #adadad;
     padding: 20px;
     border-radius: 4px;
     gap: 5px;
@@ -299,7 +299,9 @@ ffd6d60e
 @media (max-width: 900px) {
     .container {
         max-width: 100%;
+        margin: 0 10px;
         font-weight: bold;
+        margin-top: 20px;
     }
 
     .container span {
@@ -324,6 +326,8 @@ footer {
     text-align: center;
     padding: 30px;
     position: relative;
+    text-shadow: 0px 0px 10px #6b007969, 0px 0px 20px #7a008a79,
+        0px 0px 30px #8400965b, 0px 0px 40px #8e00a163;
 }
 
 footer small {
