--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     max-width: 1100px;
     margin: 0 auto;
-    background-image: url("//fotos/fundo.png");
+    background-image: url("fundo.png");
     background-position: center;
     background-size: cover;
     backdrop-filter: 10px;
